fix z-index in sidebar and quick add word

--- a/front-end/src/components/Dictionary/QuickAddWord/QuickAddWord.module.scss
+++ b/front-end/src/components/Dictionary/QuickAddWord/QuickAddWord.module.scss
@@ -5,7 +5,7 @@
   position: fixed;
   bottom: 50px;
   right: 50px;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .btnActive {
@@ -20,7 +20,7 @@
   position: fixed;
   bottom: 25px;
   right: 25px;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .wrap {
